# nvidia-aftermath-rs

./: Cargo.toml  README.md  aftermath-wrapper.h  build.rs
nsight-aftermath/include/: GFSDK_Aftermath_Defines.h
src/: aftermath_sys.rs  lib.rs
