[package]
name = "nvidia-aftermath-rs"
version = "0.0.1"
edition = "2021"
authors = ["Austin Shafer <ashafer@badland.io>"]
description = "Rust bindings for the Nvidia Aftermath SDK"
license-file = "nsight-aftermath/LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
